# marshal

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  fleet.config.example.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/marshal-orchestrate/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: chauffeur-future.md  config.md  decisions.md  design.md  marshal-recall.md  mcp-tools.md  model-playbook.md  sources.md  status.md  usage.md  vision.md
docs/plans/: phase1-cost-proof.md
examples/: README.md  benchmark-output.md  library_quickstart.py  marshal_recall_demo.py
examples/workflows/: build-adapters.yaml  compare.yaml  review.yaml
skills/marshal-benchmark/: SKILL.md
skills/marshal-orchestrate/: SKILL.md
skills/marshal-plan-consensus/: SKILL.md
skills/marshal-review-gate/: SKILL.md
skills/marshal-workflow/: SKILL.md
src/marshal_engine/: __init__.py  budgets.py  cli.py  config.py  doctor.py  eastrouter.py  env.py  fleet.py  layout.py  logs.py  mcp_server.py  pricing.py  registry.py  retry.py  scaffold.py  service.py  state.py  types.py  usage.py  workflow.py  workspaces.py  worktree.py
src/marshal_engine/backends/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  command_code.py  cursor.py  goose.py  opencode.py
src/marshal_engine/data/: prices.yaml
src/marshal_engine/memory/: __init__.py  config.py  store.py
tests/: conftest.py  test_antigravity_backend.py  test_base_run.py  test_cancel.py  test_ci_workflows.py  test_claude_code_backend.py  test_cli.py  test_codex_backend.py  test_command_code_backend.py  test_config.py  test_cursor_backend.py  test_docs_sync.py  test_doctor.py  test_eastrouter.py  test_edge_cases.py  test_env.py  test_fleet.py  test_goose_backend.py  test_invariants.py  test_logs.py  test_mcp_server.py  test_opencode_backend.py  test_pricing.py  test_retry.py  test_service.py  test_skills.py  test_state.py  test_usage.py  test_workflow.py  test_workspaces.py  test_worktree.py
tests/memory/: test_mcp_memory.py  test_memory_cli.py  test_store.py  test_wiring.py
