[project]
name = "marshal"
version = "0.0.1"
description = "Orchestration engine for driving a fleet of headless coding agents (Cursor, OpenCode, Codex) from one driver via MCP + Skills"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "chiruu12" }]
keywords = ["agents", "orchestration", "mcp", "cursor", "opencode", "codex", "headless", "coding-agent"]
dependencies = [
    "pyyaml>=6.0",
]

# NOTE: distribution name is "marshal"; the IMPORT package is `marshal_engine`.
# A top-level package literally named `marshal` would shadow the stdlib builtin and fail to import.

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6"]

[project.scripts]
marshal = "marshal_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
