[project]
name = "marshal"
version = "0.0.1"
description = "Orchestration engine for driving a fleet of headless coding agents (Cursor, OpenCode, Codex, Antigravity, Claude Code) from one driver via MCP + Skills"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "chiruu12" }]
keywords = ["agents", "orchestration", "mcp", "cursor", "opencode", "codex", "antigravity", "claude-code", "headless", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: POSIX",
]
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
]

# NOTE: distribution name is "marshal"; the IMPORT package is `marshal_engine`.
# A top-level package literally named `marshal` would shadow the stdlib builtin and fail to import.

[project.optional-dependencies]
mcp = ["mcp>=1.28.1"]
# Local fastembed embeddings (no cloud API key): pip install 'marshal[memory,fastembed]'
memory = ["cognee>=1.0"]
fastembed = ["cognee[fastembed]>=1.0"]
dev = [
    "pytest>=8",
    "ruff>=0.15.20",
    "mypy>=1.11",
    "types-PyYAML>=6",
    "pytest-cov>=5",
]

[project.scripts]
marshal = "marshal_engine.cli:main"

[project.urls]
Homepage = "https://github.com/chiruu12/marshal"
Repository = "https://github.com/chiruu12/marshal"
Issues = "https://github.com/chiruu12/marshal/issues"
Changelog = "https://github.com/chiruu12/marshal/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cognee.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
# Only ever collect the real suite. Live agent runs drop git worktrees (full repo copies,
# tests included) under marshal-runs/ and .marshal/; without this, pytest discovers those
# duplicate test modules and collection explodes.
testpaths = ["tests"]
norecursedirs = ["marshal-runs", ".marshal", ".venv", "tmp", "build", "dist"]

# Coverage is opt-in via a flag (CI passes --cov) so a bare local `pytest -q` stays fast; this
# block just configures what gets measured and how it's reported when the flag is on.
[tool.coverage.run]
source = ["src/marshal_engine"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
# The whole package is measured; the floor is enforced in CI via --cov-fail-under (see ci.yml).
precision = 0
